# devops.calc

./: .gitignore  Dockerfile  README.md
calculator_packages/calculator_microservice/src/calculator_service/: __init__.py  __main__.py  cli.py  logger.py
calculator_packages/calculator_microservice/sw_out/: MANIFEST.in  pyproject.toml  setup.py
calculator_packages/calculator_microservice/tst/: test_calculator.py
