[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-service"
version = "0.1.0"
description = "Calculator microservice with CLI (Typer)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Adrian Martínez", email = "adrian@thisisanexample.com" }
]

dependencies = [
    "typer",
    "colorlog>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
calculator = "calculator_service.cli:main"

[tool.setuptools]
package-dir = { "" = "obf_src" }
packages = { find = { where = ["obf_src"] } }
include-package-data = true

[tool.setuptools.package-data]
"calculator_service.pyarmor_runtime_*" = [
    "*.pyd",
    "*.so",
    "*.dll",
    "*.dat",
    "*.key",
    "*.lic",
    "*.json"
]
